[package]
name = "usage-bar"
version = "0.1.0"
description = "Codex CLI usage in the macOS menu bar"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
