[package]
name = "usage-bar"
version = "0.1.4"
description = "Codex CLI and Claude Code usage in the macOS menu bar"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
